Fix 100vh issues on iOS

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -16,3 +16,9 @@
         margin-bottom: env(safe-area-inset-bottom);
     }
 }
+
+@supports (height: 100svh) {
+    .h-screen {
+        height: 100svh;
+    }
+}
